Add Main-goods block

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    <![endif]-->
 
   <center style="width: 100%;table-layout:fixed;background-color: #fff !important;padding-top: 40px;padding-bottom: 40px;">
-    <div style="max-width: 600px;background-color: #dde0e1;box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
+    <div style="max-width: 600px;background-color: #fff;box-shadow: 0 0 10px rgba(0, 0, 0, .2);">
 
       <!-- Preheader (remove comment) -->
       <div
@@ -76,12 +76,12 @@
       <![endif]-->
 
       <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation"
-        style="color:#1C1E23;font-family: 'Poppins',sans-serif, Arial, Helvetica;background-color: #fff; ;Margin:0;padding:0;width: 100%;max-width: 600px; display: inline-block;"
+        style="color:#1C1E23;font-family: 'Poppins',sans-serif, Arial, Helvetica;background-color: #fff; ;Margin:0;padding:0;width: 100%;max-width: 600px;"
         >
 		<!--First block-->
 			<tr>
 				<td>
-					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: 100%; background-image:  url(/img/Баннер\ 2\ \(1\).png); background-color:#dde0e1; background-repeat: no-repeat;">
+					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: 100%; background-image:  url(/img/Баннер\ 2\ \(1\).png); background-color:#fff; background-repeat: no-repeat;">
 						<tr>
 							<td style=" padding-top: 17px; padding-right:197px ; padding-left: 197px; padding-bottom:41px ">
 								<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: ;width: 100%; "> 
@@ -180,8 +180,8 @@
 					</table>
 				</td>
 			</tr>
-		<!--End First block-->	
-		<!--Second block-->	
+		<!--End Banner block-->	
+		<!--Main block-->	
 		<tr>
 			<td>
 				<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; width: 100%; background-color:#fff !important">
@@ -207,7 +207,125 @@
 				</table>
 			</td>
 		</tr>
-		<!--End-Second block-->	
+		<!--End Main block-->	
+		<!-- Main-goods block-->	
+		<tr>
+			<td style="padding-top: 20px; padding-right:50px ; padding-left:50px; padding-bottom:40px;">
+				<table margin="0" border="0" cellspacing="0" cellpadding="0" role="presentation" style="margin: 0; text-align: center; max-width: 600px; width: 100%; background-color:#fff">
+					<tr>
+						<td margin="0" >
+							<table margin="0" border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center; max-width: 600px; width: 100%; background-color:#fff">
+								<tr>
+									<td style="padding-right:25px;background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle.png" alt="подушки" width="150" height="113">
+										</a>
+									</td>
+									<td style="padding-right:25px;background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle (1).png" alt="Одеяла" width="150" height="113">
+										</a>
+									</td>
+									<td style="padding-right:0px; background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle (2).png" alt="Постельное бельё" width="150" height="113">
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td margin="0" style=" padding-top: 20px; padding-right:0px ; padding-left:0px; padding-bottom:11px">
+							<table margin="0" border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center; max-width: 600px; width: 100%; background-color:#fff">
+								<tr>
+									<td style="padding-right:25px; padding-left: 10px; background-color:#fff">
+										<a href="!#" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Подушки
+										</a>
+									</td>
+									<td style="padding-right: px;padding-left: 40px; background-color:#fff">
+										<a href="#!" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Одеяла
+										</a>
+									</td>
+									<td></td>
+									<td style="padding-right:0px; padding-left: 54px; background-color:#fff; width: 150px;">
+										<a href="#!" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Постельное бельё
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td margin="0" style="padding-top:30px ;">
+							<table margin="0" border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center; max-width: 600px; width: 100%; background-color:#fff">
+								<tr>
+									<td style="padding-right:25px;background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle (3).png" alt="Пледы и покрывала" width="150" height="113">
+										</a>
+									</td>
+									<td style="padding-right:25px;background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle (4).png" alt="Ванная" width="150" height="113">
+										</a>
+									</td>
+									<td style="padding-right:0px; background-color:#fff">
+										<a href="#!" target="_blank">
+											<img src="/img/Rectangle (5).png" alt="Кухня" width="150" height="113">
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td margin="0" style=" padding-top: 20px; padding-right:0px ; padding-left:0px; padding-bottom:11px">
+							<table margin="0" border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center; max-width: 600px; width: 100%; background-color:#fff">
+								<tr>
+									<td style="padding-right:25px; padding-left: 0px; background-color:#fff">
+										<a href="!#" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Пледы и <br>покрывала
+										</a>
+									</td>
+									<td style="padding-right: px;padding-left: 40px; background-color:#fff; padding-bottom: 20px;">
+										<a href="#!" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Ванная
+										</a>
+									</td>
+									<td style="padding-right:0px; padding-left: 54px; background-color:#fff; width: 150px; padding-bottom: 20px;">
+										<a href="#!" target="_blank" style="color: #476FC6; text-align: center;font-family: Arial;	font-size: 16px;font-style: normal;	font-weight: 700;line-height: 24px; text-decoration-line: underline; width: 150px;">
+											Кухня
+										</a>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr>
+			<td style=" padding-top: 16px; padding-right:208px ; padding-left:208px; padding-bottom:68px">
+				<a href="#!" target="_blank" style="border-radius:30px; background-color:#2ABE80;;  max-width:184px; height: 60px; padding-top: 19px; padding-bottom: 19px;padding-left: 46px;padding-right: 46px; color: #fff; font-family: Arial;font-size: 20px;font-style: normal;font-weight: 400;line-height: normal;">
+					В магазин
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<td margin ="0" style=" padding-top: 0px; padding-right:50px ; padding-left:50px; padding-bottom:10px">
+				<p margin="0" style="color: #C4C4C4;text-align: center;text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.00);font-family: HelveticaNeueCyr;font-size: 14px;font-style: normal;	font-weight: 400;line-height: 20px; /* 142.857% */">
+					Промокод действует на все товары, кроме разделов «Кровати» и<br>
+					«Матрасы». Cкидка не суммируется со скидками на сайте, скидками и<br>
+					подарками по другим промокодам и дисконтным картам. Размер скидки<br>
+					зависит от времени оформления заказа.
+				</p>
+			</td>
+		</tr>
+		<!--End Main-goods block-->	
       <!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
