Fix Main-goods block

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<!--First block-->
 			<tr>
 				<td>
-					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: 100%; background-image:  url(/img/Баннер\ 2\ \(1\).png); background-color:#fff; background-repeat: no-repeat;">
+					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; max-width: 100%; background-image:  url(/img/Баннер\ 2\ \(1\).png); background-color:#fff; background-repeat: no-repeat;">
 						<tr>
 							<td style=" padding-top: 17px; padding-right:197px ; padding-left: 197px; padding-bottom:41px ">
 								<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: ;width: 100%; "> 
