--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<tr>
 										<td>
 											<a href="#!" target="_blank">
-												<img src="/img/Object (1).png" alt="logo" width="77" height="39">
+												<img src="/img/Main-logo-1.png" alt="logo" width="77" height="39">
 											</a>
 										</td>
 										<td>
@@ -125,7 +125,7 @@
 										</td>
 										<td>
 											<a href="#!" target="_blank">
-												<img src="/img/03.png" alt="logo-1=3" width="69" height="60">
+												<img src="/img/03.png" alt="logo-1-3" width="69" height="60">
 											</a>
 										</td>
 									</tr>
@@ -218,17 +218,17 @@
 								<tr>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle.png" alt="подушки" width="150" height="113">
+											<img src="/img/pillows.png" alt="Подушки" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle (1).png" alt="Одеяла" width="150" height="113">
+											<img src="/img/blankets.png" alt="Одеяла" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:0px; background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle (2).png" alt="Постельное бельё" width="150" height="113">
+											<img src="/img/bed sheets.png" alt="Постельное бельё" width="150" height="113">
 										</a>
 									</td>
 								</tr>
@@ -265,17 +265,17 @@
 								<tr>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle (3).png" alt="Пледы и покрывала" width="150" height="113">
+											<img src="/img/bedspreads.png" alt="Пледы и покрывала" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle (4).png" alt="Ванная" width="150" height="113">
+											<img src="/img/bathroom.png" alt="Ванная" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:0px; background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/Rectangle (5).png" alt="Кухня" width="150" height="113">
+											<img src="/img/kitchen.png" alt="Кухня" width="150" height="113">
 										</a>
 									</td>
 								</tr>
