--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
 		<!--First block-->
 			<tr>
 				<td>
-					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; max-width: 100%; background-image:  url(/img/Баннер\ 2\ \(1\).png); background-color:#fff; background-repeat: no-repeat;">
+					<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; max-width: 100%; background-image:  url(./img/Banner.png); background-color:#fff; background-repeat: no-repeat;">
 						<tr>
 							<td style=" padding-top: 17px; padding-right:197px ; padding-left: 197px; padding-bottom:41px ">
 								<table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style=" max-width: 600px; min-width: ;width: 100%; "> 
 									<tr>
 										<td>
 											<a href="#!" target="_blank">
-												<img src="/img/Main-logo-1.png" alt="logo" width="77" height="39">
+												<img src="./img/Main-logo-1.png" alt="logo" width="77" height="39">
 											</a>
 										</td>
 										<td>
 											<a href="#!" target="_blank">
-												<img src="/img/лого2.png" alt="logo" width="91" height="17">
+												<img src="./img/Maim-logo-2.png" alt="logo" width="91" height="17">
 											</a>
 										</td>
 									</tr>			
@@ -115,17 +115,17 @@
 									<tr>
 										<td style=" padding-right: 17px ;">
 											<a href="#!" target="_blank">
-												<img src="/img/01.png" alt="logo-1-1" width="116" height="60">
+												<img src="./img/01.png" alt="logo-1-1" width="116" height="60">
 											</a>
 										</td>
 										<td  style=" padding-right: 15px ;">
 											<a href="#!" target="_blank">
-												<img src="/img/02.png" alt="logo-1-2" width="106" height="60">
+												<img src="./img/02.png" alt="logo-1-2" width="106" height="60">
 											</a>
 										</td>
 										<td>
 											<a href="#!" target="_blank">
-												<img src="/img/03.png" alt="logo-1-3" width="69" height="60">
+												<img src="./img/03.png" alt="logo-1-3" width="69" height="60">
 											</a>
 										</td>
 									</tr>
@@ -218,17 +218,17 @@
 								<tr>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/pillows.png" alt="Подушки" width="150" height="113">
+											<img src="./img/pillows.png" alt="Подушки" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/blankets.png" alt="Одеяла" width="150" height="113">
+											<img src="./img/blankets.png" alt="Одеяла" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:0px; background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/bed sheets.png" alt="Постельное бельё" width="150" height="113">
+											<img src="./img/bed-sheets.png" alt="Постельное бельё" width="150" height="113">
 										</a>
 									</td>
 								</tr>
@@ -265,17 +265,17 @@
 								<tr>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/bedspreads.png" alt="Пледы и покрывала" width="150" height="113">
+											<img src="./img/bedspreads.png" alt="Пледы и покрывала" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:25px;background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/bathroom.png" alt="Ванная" width="150" height="113">
+											<img src="./img/bathroom.png" alt="Ванная" width="150" height="113">
 										</a>
 									</td>
 									<td style="padding-right:0px; background-color:#fff">
 										<a href="#!" target="_blank">
-											<img src="/img/kitchen.png" alt="Кухня" width="150" height="113">
+											<img src="./img/kitchen.png" alt="Кухня" width="150" height="113">
 										</a>
 									</td>
 								</tr>
